--- a/source/sass/blocks/banner-cards.scss
+++ b/source/sass/blocks/banner-cards.scss
@@ -22,8 +22,8 @@
 }
 
 .index-block .banners-img-with-text-list {
-    padding-top: 0;
-    padding-bottom: 118px;
+    padding: 0;
+    
 }
 
 @media (min-width: 744px) {
