--- a/source/sass/blocks/buttons.scss
+++ b/source/sass/blocks/buttons.scss
@@ -6,8 +6,20 @@
     line-height: 20px;
     text-align: center;
     padding: 15px 32px;
+    display: block;
 }
 
 .header__main-inner {
     padding-top: 24px;
+}
+
+.button-link {
+    font-family: "KFC";
+    font-style: normal;
+    font-weight: 900;
+    font-size: 16px;
+    line-height: 20px;
+    text-decoration-line: underline;
+    border: none;
+    color: #E4002B;
 }
