--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,5 +6,6 @@
 @import "blocks/buttons.scss";
 @import "blocks/tizer-top.scss";
 @import "blocks/tizer-bottom.scss";
-@import "blocks/company-item.scss";
 @import "blocks/banner-cards.scss";
+@import "blocks/company-item-top.scss";
+@import "blocks/company-item-bottom.scss";
